--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 
     <h2>What is your name?</h2>
     <p>
-      <!-- TODO(you): Enter your answer here -->
+      BEKİR YORULMAZ				
     </p>
 
     <h2>What is a fun fact about yourself?</h2>
     <p>
-      <!-- TODO(you): Enter your answer here -->
+		ı am optimistic
     </p>
 
     <h2>What do you look like?</h2>
-    <!-- TODO(you): Add a picture of yourself or of something that represents yourself. -->
-
+		<img src="1.jpeg" alt="asdasd" width="100px" height="100px"/>
+	
   </body>
 </html>
